tests/jest_integration_incremental/jest_integration_incremental.exp
========================================================================================================================
We start with an error because ./module doesn't exist
========================================================================================================================
Error ----------------------------------------------------------------------------------------------------- test.js:1:11

Cannot resolve module `./module`. [cannot-resolve-module]

   1| jest.mock('./module')
                ^^^^^^^^^^



Found 1 error



========================================================================================================================
Fix the error by introducing module.js
========================================================================================================================
No errors!



========================================================================================================================
Reintroduce the error by removing module.js
========================================================================================================================
Error ----------------------------------------------------------------------------------------------------- test.js:1:11

Cannot resolve module `./module`. [cannot-resolve-module]

   1| jest.mock('./module')
                ^^^^^^^^^^



Found 1 error
